src/App.css
/* General */
html {
  --box-size: min(8vw, 5.5vh);
  --default-font-size: calc(var(--box-size) * 0.9);
  --dark-color: rgb(55 54 71);
  --shadow-color: rgba(20 19 25 / 50%);
  --drag-color: rgba(77 76 99);
  --light-color: rgb(239 239 239);

  background-color: var(--dark-color);
}

body {
  margin: 0;
}

.App {
  background-color: var(--dark-color);
  color: var(--light-color);
  font-family: sans-serif;
  font-size: var(--default-font-size);
  display: grid;
  height: 90vh; /* fallback if svh isn't handled */
  height: 100svh;
  width: 100vw;
  overflow: scroll;
}

h1 {
  all: unset;
  font-size: calc(var(--default-font-size) * 1.2);
  display: block;
  font-weight: bold;
}

small {
  font-size: calc(var(--default-font-size) * 0.5);
}

button {
  all: unset;
  text-decoration: none;
  text-align: center;
  appearance: none;
  font-size: calc(var(--default-font-size) * 0.75);
  font-family: sans-serif;
  background-color: var(--light-color);
  border: 1px solid var(--light-color);
  border-radius: 5px;
  color: black;
  margin: 10px;
  padding: 1px 6px;
}

button:disabled {
  opacity: 50%;
}

#pool::-webkit-scrollbar {
  -webkit-appearance: none;
  height: 1vh;
  background-color: transparent;
  border-radius: 5px;
}

#pool::-webkit-scrollbar-thumb {
  background: rgb(127, 125, 125);
  border-radius: 5px;
}

#pool {
  -webkit-overflow-scrolling: auto;
}

/* Slider setting styling */
input[type="range"] {
  appearance: none;
  width: 100%;
  background: var(--dark-color);
}

input[type="range"]:focus {
  outline: none;
}

/* Slider thumb */
input[type="range"]::-webkit-slider-thumb {
  appearance: none;
  height: calc(var(--default-font-size) * 1.5);
  width: calc(var(--default-font-size) * 0.5);
  border-radius: 2px;
  background: var(--light-color);
  box-shadow: 0 0 2px 2px black;
  cursor: pointer;
  margin-top: calc(var(--default-font-size) * -0.5);
}

input[type="range"]::-moz-range-thumb {
  height: calc(var(--default-font-size) * 1.5);
  width: calc(var(--default-font-size) * 0.5);
  border-radius: 2px;
  background: var(--light-color);
  box-shadow: 0 0 2px 2px black;
}

input[type="range"]::-ms-thumb {
  height: calc(var(--default-font-size) * 1.5);
  width: calc(var(--default-font-size) * 0.5);
  border-radius: 2px;
  background: var(--light-color);
  box-shadow: 0 0 2px 2px black;
  cursor: pointer;
}

/* Slider track */
input[type="range"]::-webkit-slider-runnable-track {
  height: 2vh;
  cursor: pointer;
  background: var(--light-color);
  border-radius: 2px;
}

input[type="range"]:focus::-webkit-slider-runnable-track {
  background: var(--light-color);
}

input[type="range"]::-moz-range-track {
  height: 2vh;
  cursor: pointer;
  background: var(--light-color);
  border-radius: 2px;
}

input[type="range"]::-ms-track {
  height: 2vh;
  cursor: pointer;
  background: var(--light-color);
  border-radius: 2px;
}

input[type="range"]::-ms-fill-lower {
  background: var(--light-color);
}

input[type="range"]::-ms-fill-upper {
  background: var(--light-color);
}

input[type="range"]:focus::-ms-fill-lower {
  background: var(--light-color);
}

input[type="range"]:focus::-ms-fill-upper {
  background: var(--light-color);
}

#numLetters-info {
  color: var(--light-color);
  font-size: var(--default-font-size);
  padding: 0 1vh;
  justify-content: center;
  align-items: center;
}

#numLetters-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: baseline;
}

#controls,
#exitDaily {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  grid-area: controls;
  width: 100vw;
  height: calc(var(--box-size) * 1.2);
  border-bottom: 2px solid var(--light-color);
}

.controlButton {
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  border: 0;
  width: var(--default-font-size);
  height: var(--default-font-size);
  background-color: transparent;
  padding: 1px 6px;
}

#info {
  white-space: pre-line;
  padding: 5vmin;
}

.close {
  margin-bottom: 2vh;
}

#settingsButton {
  background-image: url("./images/settings.svg");
}

#newGameButton {
  background-image: url("./images/new_game.svg");
}

#helpButton {
  background-image: url("./images/help.svg");
}

#rulesButton {
  background-image: url("./images/info.svg");
}

#heartButton {
  background-image: url("./images/heart.svg");
}

#calendarButton {
  background-image: url("./images/daily.svg"),
    radial-gradient(circle, rgba(239, 239, 239, 0.6) 30%, rgba(55, 54, 71));
  width: calc(var(--default-font-size) * 2);
}

#calendarButtonSolved {
  background-image: url("./images/daily.svg");
}

#installButton {
  background-image: url("./images/install.svg");
}

.settings {
  text-align: center;
  overflow: scroll;
  font-size: calc(var(--default-font-size) * 0.75);
  justify-items: center;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

#settings {
  display: flex;
  flex-direction: column;
  margin: 10px;
  width: 100%;
  align-items: stretch;
}

.setting {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: left;
  margin: 0.5cm;
}

.setting-description {
  padding: 0 5px 0 0;
}

.setting-info {
  font-size: calc(var(--default-font-size) / 2);
}

#setting-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 100%;
}

#setting-buttons > button {
  margin: 10px;
}

a {
  color: var(--light-color);
}

#crossjig {
  display: grid;
  grid-template-areas:
    "controls"
    "game";
  grid-template-rows:
    auto
    1fr;
}

#game {
  display: grid;
  grid-area: game;
  grid-template-areas:
    "board"
    "pool";
  grid-template-rows: auto 1fr;
}

#board {
  overflow: hidden;
  grid-area: board;
  display: grid;
  touch-action: none;
  justify-content: center;
  grid-template-columns: repeat(12, var(--box-size));
  grid-template-rows: repeat(12, var(--box-size));
  width: fit-content;
  height: fit-content;
  justify-self: center;
  color: var(--light-color);
  border: 1px solid var(--light-color);
  margin: 3vmin 0 0;
}

.letter {
  display: flex;
  pointer-events: auto;
  user-select: none;
  touch-action: none;
  align-items: center;
  justify-content: center;
  font-size: var(--default-font-size);
  background-color: var(--dark-color);
  color: var(--light-color);
}

.letter.filled {
  background-color: var(--light-color);
  color: var(--dark-color);
  transition: background-color 3s;
}

.letter.overlapping {
  color: rgb(226 88 88);
}

.borderTop {
  border-top: 1px solid var(--light-color);
}

.borderLeft {
  border-left: 1px solid var(--light-color);
}

.borderRight {
  border-right: 1px solid var(--light-color);
}

.borderBottom {
  border-bottom: 1px solid var(--light-color);
}

#pool {
  grid-area: pool;
  width: 100%;
  height: calc(88vh - (var(--box-size) * 12) - (var(--box-size) * 1.2)); 
  height: calc(98svh - (var(--box-size) * 12) - (var(--box-size) * 1.2));
  display: flex;
  overflow-x: hidden;
  overflow-y: scroll;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: safe center;
  justify-content: center;
}

.piece {
  display: grid;
  touch-action: none;
  pointer-events: none;
  grid-template-columns: repeat(var(--numCols), var(--box-size));
  grid-template-rows: repeat(var(--numRows), var(--box-size));
  justify-content: center;
  font-size: var(--default-font-size);
  width: fit-content;
  height: fit-content;
  align-content: center;
}

.pool-slot {
  align-self: stretch;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: fit-content;
  padding: 3vmin;
}

#drag-group {
  display: grid;
  touch-action: none;
  grid-template-columns: repeat(var(--group-columns), var(--box-size));
  grid-template-rows: repeat(var(--group-rows), var(--box-size));
  width: fit-content;
  height: fit-content;
}

#result {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.dragging {
  --lift: calc(var(--box-size) * -0.08);
  background-color: var(--drag-color);
  transform: translate(var(--lift), var(--lift));
}

.shadow-square {
  background-color: var(--shadow-color);
}

.rules {
  display: grid;
  grid-template-areas:
    "header"
    "text"
    "close"
    "version";
  text-align: center;
  overflow: scroll;
  font-size: calc(var(--default-font-size) * 0.75);
  justify-items: center;
  align-items: center;
}

#rulesHeader {
  grid-area: header;
}

#rulesText {
  white-space: pre-line;
  margin: 0 2vmax;
  grid-area: text;
}

#rulesClose {
  height: fit-content;
  width: fit-content;
  grid-area: close;
}

#rulesVersion {
  grid-area: version;
  margin: 0 0 1vmax;
}

.info {
  white-space: pre-line;
  display: flex;
  flex-direction: column;
  text-align: center;
  overflow: scroll;
  justify-items: center;
  justify-content: space-evenly;
  align-items: center;
  font-size: calc(var(--default-font-size) * 0.75);
}

.infoText {
  margin: 2vmax;
}

.info a {
  color: rgb(0 162 255);
}

#gameOver {
  display: flex;
  flex-direction: column;
}

.stats {
  font-size: calc(var(--default-font-size) * 0.75);
  overflow: scroll;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

#statsDistribution {
  border-top: 3px solid var(--light-color);
  border-bottom: 3px solid var(--light-color);
}

.statsBar {
  display: grid;
  grid-template-columns: auto 1fr;
  width: 90vw;
  margin: 10px 0;
}

.statsBar > .statsDay {
  align-self: center;
  width: calc(var(--default-font-size) * 1);
  padding: 0 2vw;
}
.statsBar > .statsWon {
  background-color: var(--light-color);
  height: calc(var(--default-font-size) * 1.2);
}

.statsNumber {
  text-align: center;
  margin: 1vh 0;
}
.statsNumber > .number {
  font-size: calc(var(--default-font-size) * 1.5);
}

.statLabel {
  padding: 2vw 0 0 2vw;
}

/* Landscape, small screen */

@media (orientation: landscape) {
  #crossjig {
    grid-template-areas: "controls game";
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr;
  }

  #game {
    display: grid;
    grid-area: game;
    grid-template-areas: "board pool";
    grid-template-columns: auto 1fr;
    align-self: center;
  }

  #board {
    align-self: center;
    margin: 0 0 0 3vmin;
  }

  #pool {
    height: 90vh; /* fallback if svh isn't handled */
    height: 100svh;
  }

  #controls,
  #exitDaily {
    flex-direction: column;
    border: solid var(--light-color);
    border-width: 0 2px 0 0;
    align-items: center;
    height: 100%;
    width: calc(var(--box-size) * 1.5);
  }

  #exitDailyButton {
    transform: rotate(270deg);
    width: fit-content;
    white-space: nowrap;
  }

  #calendarButton {
    width: var(--default-font-size);
  }
}

/* Large screen */
@media (min-height: 800px) and (min-width: 800px) {
  html {
    --box-size: min(4vh, 7vw, 1cm);
  }

  #controls {
    justify-content: center;
  }

  #settings,
  #setting-buttons {
    width: fit-content;
  }
}

